# aTox

./: .bazelrc  Dockerfile  FAQ-ru.md  FAQ.md  README.md  WORKSPACE
.github/workflows/: ci.yaml
atox/: build.gradle.kts
atox/src/main/: AndroidManifest.xml
atox/src/main/kotlin/: ActionReceiver.kt  MainActivity.kt
atox/src/main/kotlin/settings/: Settings.kt
atox/src/main/kotlin/tox/: BootstrapNodeRegistryImpl.kt  EventListenerCallbacks.kt  ToxStarter.kt
atox/src/main/kotlin/ui/: NotificationHelper.kt
atox/src/main/kotlin/ui/addcontact/: AddContactFragment.kt
atox/src/main/kotlin/ui/call/: CallFragment.kt  CallViewModel.kt
atox/src/main/kotlin/ui/chat/: ChatFragment.kt  ChatViewModel.kt
atox/src/main/kotlin/ui/contactlist/: ContactAdapter.kt  ContactListFragment.kt
atox/src/main/kotlin/ui/settings/: SettingsFragment.kt  SettingsViewModel.kt
atox/src/main/res/layout/: add_contact_fragment.xml  chat_fragment.xml  contact_list_view_item.xml  fragment_chat.xml  fragment_contact_list.xml  fragment_settings.xml
atox/src/main/res/menu/: chat_options_menu.xml
atox/src/main/res/values/: strings.xml
atox/src/main/res/values-bg/: strings.xml
atox/src/main/res/values-fa/: strings.xml
atox/src/main/res/values-fi/: strings.xml
atox/src/main/res/values-ht/: strings.xml
atox/src/main/res/values-hu/: strings.xml
atox/src/main/res/values-sq/: strings.xml
atox/src/main/res/values-ta/: strings.xml
atox/src/main/res/values-uk/: strings.xml
atox/src/main/res/values-vec/: strings.xml
buildSrc/src/main/kotlin/: Dependencies.kt
core/: BUILD.bazel  build.gradle.kts
core/src/main/kotlin/db/: BUILD.bazel
domain/: BUILD.bazel  build.gradle.kts
domain/src/androidTest/: BazelAndroidManifest.xml
domain/src/main/: BazelAndroidManifest.xml
domain/src/main/kotlin/feature/: CallManager.kt  ChatManager.kt  FileTransferManager.kt
domain/src/main/kotlin/tox/: Tox.kt  ToxAvEventListener.kt  ToxEventListener.kt  ToxSaveTester.kt  ToxUtil.kt  ToxWrapper.kt
fastlane/metadata/android/bg/changelogs/: 10.txt
fastlane/metadata/android/hu/changelogs/: 10.txt
fastlane/metadata/android/pt/: full_description.txt
fastlane/metadata/android/pt/changelogs/: 9.txt
fastlane/metadata/android/sq/: full_description.txt
fastlane/metadata/android/sq/changelogs/: 10.txt  12.txt
fastlane/metadata/android/vec/changelogs/: 10.txt  14.txt
gradle/: libs.versions.toml
