load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library", "kt_jvm_test")
load("@rules_android//android:rules.bzl", "android_library")
load("@rules_java//java:defs.bzl", "java_import")

java_import(
    name = "jvm-toxcore-c",
    jars = [
        "@jvm-toxcore-c//:jvm-toxcore-c.jar",
        "@jvm-toxcore-api//:jvm-toxcore-api.jar",
        "@jvm-toxcore-api//:libjvm-toxcore-api-java.jar",
    ],
    deps = ["@maven//:org_scala_lang_scala_library"],
)

android_library(
    name = "tox4j",
    exports = [
        ":jvm-toxcore-c",
        "@jvm-toxcore-c//:libtox4j-c.so",
    ],
)

kt_android_library(
    name = "domain",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "ltd.evilcorp.domain",
    visibility = ["//visibility:public"],
    deps = [
        ":tox4j",
        "//core",
    ],
)

TEST_DEPS = [
    ":domain",
    "@maven//:junit_junit",
]

kt_jvm_test(
    name = "ToxIdValidatorTest",
    size = "small",
    srcs = ["src/test/kotlin/tox/ToxIdValidatorTest.kt"],
    test_class = "ltd.evilcorp.domain.tox.ToxIdValidatorTest",
    deps = TEST_DEPS,
)

kt_jvm_test(
    name = "ToxTypesTest",
    size = "small",
    srcs = ["src/test/kotlin/tox/ToxTypesTest.kt"],
    test_class = "ltd.evilcorp.domain.tox.ToxTypesTest",
    deps = TEST_DEPS,
)

kt_jvm_test(
    name = "ToxUtilTest",
    size = "small",
    srcs = ["src/test/kotlin/tox/ToxUtilTest.kt"],
    test_class = "ltd.evilcorp.domain.tox.ToxUtilTest",
    deps = TEST_DEPS,
)

kt_android_library(
    name = "tox_test_lib",
    srcs = ["src/androidTest/kotlin/tox/ToxTest.kt"],
    manifest = "src/main/BazelAndroidManifest.xml",
    custom_package = "ltd.evilcorp.domain.tox",
    deps = [
        ":domain",
        "@maven//:androidx_test_ext_junit",
        "@maven//:io_mockk_mockk",
        "@maven//:junit_junit",
    ],
)

android_binary(
    name = "tox_test_app",
    multidex = "native",
    manifest = "src/main/BazelAndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "26", # Higher than normal due to mockk.
        "targetSdkVersion": "29",
    },
    custom_package = "ltd.evilcorp.domain.tox",
    deps = [
        ":domain",
        "@maven//:androidx_test_ext_junit",
        "@maven//:io_mockk_mockk",
        "@maven//:junit_junit",
    ],
)

android_binary(
    name = "tox_test_app_instrumentation",
    manifest = "src/androidTest/BazelAndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "26", # Higher than normal due to mockk.
        "targetSdkVersion": "29",
    },
    custom_package = "ltd.evilcorp.domain.tox",
    instruments = ":tox_test_app",
)

android_instrumentation_test(
    name = "tox_test",
    test_app = ":tox_test_app_instrumentation",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_28_x86_qemu2",
)

# android_local_test(
#     name = "tox_test",
#     test_class = "ltd.evilcorp.domain.tox.ToxTest",
#     custom_package = "ltd.evilcorp.domain.tox",
#     manifest_values = {
#         "minSdkVersion": "19",
#         "targetSdkVersion": "29",
#     },
#     deps = [
#         ":tox_test_lib",
#         "@maven//:org_robolectric_robolectric",
#         "@robolectric//bazel:android-all",
#     ],
# )
