load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_android_library(
    name = "domain",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "ltd.evilcorp.domain",
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "@jvm-toxcore-c",
        "@maven//:androidx_core_core_ktx",
    ],
)

TEST_DEPS = [
    ":domain",
    "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
]

kt_jvm_test(
    name = "ToxIdValidatorTest",
    size = "small",
    srcs = ["src/test/kotlin/tox/ToxIdValidatorTest.kt"],
    test_class = "ltd.evilcorp.domain.tox.ToxIdValidatorTest",
    deps = TEST_DEPS,
)

kt_jvm_test(
    name = "ToxTypesTest",
    size = "small",
    srcs = ["src/test/kotlin/tox/ToxTypesTest.kt"],
    test_class = "ltd.evilcorp.domain.tox.ToxTypesTest",
    deps = TEST_DEPS,
)

kt_jvm_test(
    name = "ToxUtilTest",
    size = "small",
    srcs = ["src/test/kotlin/tox/ToxUtilTest.kt"],
    test_class = "ltd.evilcorp.domain.tox.ToxUtilTest",
    deps = TEST_DEPS,
)
